...
            name="viewModel"
            type="com.devmmurray.dayplanner.ui.viewmodel.HomeViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">


        <androidx.constraintlayout.widget.ConstraintLayout
...
                    android:id="@+id/hourly_recycler_motion_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutDescription="@xml/fragment_home_scene">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/todays_outlook"
                        style="@style/HeaderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="@dimen/large_margin"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:text="@string/today_s_outlook"
                        app:layout_constraintBottom_toTopOf="@id/hourly_forecast_recycler"
                        app:layout_constraintEnd_toStartOf="@id/city_state"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/city_state"
...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/more"
                            style="@style/CurrentWeatherMoreLessButtons"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/tiny_margin"
                            android:layout_marginBottom="@dimen/tiny_margin"
                            android:onClick="@{() -> home.moreButtonFunction()}"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weather_n_buttons_container">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/todays_events"
                    style="@style/HeaderText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/today_s_events"
                    app:layout_constraintEnd_toStartOf="@id/switch_events_to_all"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_events_to_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/add_event_button"
                    app:layout_constraintEnd_toStartOf="@id/all_events_textView"
                    app:layout_constraintStart_toEndOf="@id/todays_events"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/all_events_textView"
                    style="@style/SmallTextTeal"
...
