<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_item_home" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/menu_item_todo" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_news" />

</menu>