<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="todoFragment"
            type="com.devmmurray.dayplanner.ui.fragment.TodoFragment" />

        <variable
            name="viewModel"
            type="com.devmmurray.dayplanner.ui.viewmodel.TodoViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todo_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.TodoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/todo_list_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="145dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/todo_header_text"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:fontFamily="@font/typewriter"
                    android:text="@string/to_do_list"
                    app:layout_constraintBottom_toTopOf="@id/add_task_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/add_task_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_padding"
                    android:background="@drawable/add_todo_edittext_background"
                    android:drawableEnd="@drawable/ic_baseline_add_24"
                    android:hint="@string/add_new_item"
                    android:padding="@dimen/large_padding"
                    app:layout_constraintEnd_toStartOf="@id/return_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/todo_header_text"
                    android:autofillHints="@string/add_new_item"
                    android:inputType="text"
                    android:maxLines="1"/>

                <ImageView
                    android:id="@+id/return_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:padding="@dimen/small_padding"
                    android:clickable="true"
                    android:onClick="@{() -> todoFragment.addTask()}"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    app:layout_constraintBottom_toTopOf="@+id/todo_recycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/add_task_edittext"
                    app:layout_constraintTop_toBottomOf="@id/todo_header_text"
                    android:contentDescription="@string/arrow_shaped_return_key" />

                <TextView
                    android:id="@+id/no_tasks"
                    style="@style/SmallTextBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tasks_scheduled"
                    android:visibility="visible"
                    android:layout_marginTop="45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_task_edittext" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todo_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:visibility="invisible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_task_edittext" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>